--- a/AOC1.ipynb
+++ b/AOC1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwqy3dSTQBpNwYmSxduo60",
+      "authorship_tag": "ABX9TyNPSrcZHM0v3ZbKTjeZiQK6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,20 +39,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 41,
       "metadata": {
         "id": "YEyUrhHlIxoB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec65ab42-55bb-473d-b6df-0c3461f58e72"
+        "outputId": "2ad33e18-3108-487a-fa60-5dbba1d169eb"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "73211\n"
+            "73211\n",
+            "213958\n"
           ]
         }
       ],
@@ -82,15 +83,28 @@
         "      sums = 0\n",
         "    else:\n",
         "      sums += int(elf)\n",
-        "  print(max(calories_elf))\n",
+        "  return calories_elf\n",
         "\n",
-        "solve_part1(get_input())\n",
-        "\n"
+        "print(max(solve_part1(get_input())))\n",
+        "\n",
+        "def solve_part2(data):\n",
+        "  calories_elf = []\n",
+        "  sums = 0\n",
+        "  for elf in data:\n",
+        "    if elf == \"\":\n",
+        "      calories_elf.append(sums)\n",
+        "      sums = 0\n",
+        "    else:\n",
+        "      sums += int(elf)\n",
+        "  calories_elf.sort(reverse=True)\n",
+        "  return sum(calories_elf[:3])\n",
+        "\n",
+        "print(solve_part2(get_input()))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "e8FyhFDBIxn9"
       },
