--- a/AOC4.ipynb
+++ b/AOC4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUE5y3lZghPYnbfePr8qpT",
+      "authorship_tag": "ABX9TyMPjB+vcw4tYy2rsOdlvHfd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,25 +53,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "id": "YEyUrhHlIxoB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "11f48844-d14e-4248-ade6-4abd402facb0"
+        "outputId": "1c36f1db-85ad-463a-ce08-d048be0b23a8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "571\n",
-            "917\n",
-            "571\n",
-            "917\n",
-            "571\n",
-            "917\n",
             "917\n"
           ]
         }
@@ -168,7 +162,15 @@
         "        count += 1\n",
         "print(count)\n",
         "\n",
-        "\n",
+        "\"Ported from C\"\n",
+        "count = 0\n",
+        "for pair in pairs:\n",
+        "    first_range,second_range = pair.split(\",\")\n",
+        "    first_a, first_b = map(int,first_range.split(\"-\"))\n",
+        "    second_a, second_b = map(int,second_range.split(\"-\"))\n",
+        "    if (max(first_a, second_a) <= min(first_b, second_b)):\n",
+        "        count += 1\n",
+        "print(count)\n",
         "\n",
         "\n",
         "\n",
