--- a/AOC5.ipynb
+++ b/AOC5.ipynb
@@ -12,20 +12,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MnLv7KndJRna",
-        "outputId": "0e297c6b-be9e-4e21-dccd-c5f1bf300220"
+        "outputId": "98c0f179-f72e-4e1e-86ea-f128fd992cc4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K\u001b[?25hnpx: installed 1 in 2.157s\n",
+            "\u001b[K\u001b[?25hnpx: installed 1 in 1.916s\n",
             "\u001b[36m> cloned \u001b[1mgitmapd/AOC\u001b[22m#\u001b[1mHEAD\u001b[22m to inputs\u001b[39m\n"
           ]
         }
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YEyUrhHlIxoB",
-        "outputId": "2a688d85-ff8d-4eed-8d28-14bd2b8b3fb7"
+        "outputId": "cb54d068-d23a-44f6-9ded-4ba46cece8ed"
       },
       "outputs": [
         {
@@ -51,11 +51,12 @@
           "name": "stdout",
           "text": [
             "Part1: BSDMQFLSP\n",
-            "Part2: VFQBQGHFR\n"
+            "Part2: PGSQBFLDP\n"
           ]
         }
       ],
       "source": [
+        "\n",
         "input_path = Path(\"inputs\") / \"AOC2022\"\n",
         "\n",
         "\n",
@@ -75,6 +76,7 @@
         "\n",
         "stacks = {int(digit):[] for digit in stack_strings[-1].replace(\" \",\"\")}\n",
         "indexes = [index for index, char in enumerate(stack_strings[-1]) if char != \" \"]\n",
+        "\n",
         "\n",
         "def load_stacks():\n",
         "  for string in stack_strings[:-1]:\n",
@@ -100,7 +102,9 @@
         "    answer += stacks[stack][-1]\n",
         "  return answer\n",
         "\n",
+        "\n",
         "load_stacks()\n",
+        "\n",
         "for instruction in instructions:\n",
         "  instruction = instruction.replace(\"move\",\"\").replace(\"from \",\"\").replace(\"to \",\"\").strip().split(\" \")\n",
         "  instruction = [int(i) for i in instruction]\n",
@@ -113,11 +117,10 @@
         "    crates_removed = stacks[crates_from].pop()\n",
         "    stacks[crates_to].append(crates_removed)\n",
         "\n",
-        "\n",
         "print(f\"Part1: {get_stacks()}\") \n",
         "\n",
-        "\n",
         "clear_stacks()\n",
+        "load_stacks()\n",
         "\n",
         "\"Part2\"\n",
         "\n",
@@ -129,24 +132,13 @@
         "  crates_from = instruction[1]\n",
         "  crates_to = instruction[2]\n",
         "  \n",
-        "  for crate in range(crates):\n",
-        "    crates_to_remove = stacks[crates_from][:-crates]\n",
-        "    stacks[crates_from] = stacks[crates_from][-crates:]\n",
-        "\n",
-        "    for to_remove in crates_to_remove:\n",
+        "  crates_to_remove = stacks[crates_from][-crates:]\n",
+        "  stacks[crates_from] = stacks[crates_from][:-crates]\n",
+        "  \n",
+        "  for to_remove in crates_to_remove:\n",
         "      stacks[crates_to].append(to_remove)\n",
-        "\n",
-        "load_stacks()\n",
         "    \n",
-        "print(f\"Part2: {get_stacks()}\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "print(f\"Part2: {get_stacks()}\")\n"
       ]
     },
     {
@@ -164,7 +156,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPua2N4tKU75vcRvTDcaspO",
+      "authorship_tag": "ABX9TyPWgTQQJxRRsDlEvBIdtB+x",
       "include_colab_link": true
     },
     "kernelspec": {
