--- a/AOC6.ipynb
+++ b/AOC6.ipynb
@@ -12,20 +12,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MnLv7KndJRna",
-        "outputId": "3aef5027-048d-45e3-b1bf-f48e3768be49"
+        "outputId": "20d3a0ca-6a63-4891-b002-25e1cb72a46c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[K\u001b[?25hnpx: installed 1 in 1.31s\n",
+            "\u001b[?25l[..................] / rollbackFailedOptional: verb npm-session 0327dcede00b412\u001b[0m\u001b[K\r[#######...........] \\ postinstall: sill install executeActions\u001b[0m\u001b[K\r[############......] - finalize:degit: sill doSerial finalize 8\u001b[0m\u001b[K\r\r\u001b[K\u001b[?25hnpx: installed 1 in 0.938s\n",
             "\u001b[36m> destination directory is not empty. Using --force, continuing\u001b[39m\n",
             "\u001b[36m> cloned \u001b[1mgitmapd/AOC\u001b[22m#\u001b[1mHEAD\u001b[22m to inputs\u001b[39m\n"
           ]
@@ -38,13 +38,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YEyUrhHlIxoB",
-        "outputId": "b53f2f4a-3a1e-490d-a9e3-ef8677c08afe"
+        "outputId": "e7e79cb1-101b-42af-c7ab-f3b0691dd395"
       },
       "outputs": [
         {
@@ -54,7 +54,11 @@
             "Part 1:  1929\n",
             "Part 2:  3298\n",
             "Part 1: 1929\n",
-            "Part 2: 3298\n"
+            "Part 2: 3298\n",
+            "Part 1:  1929\n",
+            "Part 2:  3298\n",
+            "Part 1:  1929\n",
+            "Part 2:  3298\n"
           ]
         }
       ],
@@ -85,14 +89,43 @@
         "    if len(s) == 14:\n",
         "        print(\"Part 2: \", i)\n",
         "        break\n",
+        "\n",
         "\"Another example\"\n",
         "print(f'Part 1: {next(i for i in range(4,len(marker)) if len(set(marker[i-4:i]))==4)}')\n",
-        "print(f'Part 2: {next(i for i in range(4,len(marker)) if len(set(marker[i-14:i]))==14)}')\n"
+        "print(f'Part 2: {next(i for i in range(4,len(marker)) if len(set(marker[i-14:i]))==14)}')\n",
+        "\n",
+        "\"Another attempt\"\n",
+        "for i in range(len(marker)):\n",
+        "    s = set(marker[i:i+4])\n",
+        "    if len(s) == 4:\n",
+        "        print(\"Part 1: \", i+4)\n",
+        "        break\n",
+        "\n",
+        "for i in range(len(marker)):\n",
+        "    s = set(marker[i:i+14])\n",
+        "    if len(s) == 14:\n",
+        "        print(\"Part 2: \", i+14)\n",
+        "        break\n",
+        "\n",
+        "\"Other!\"\n",
+        "size = 4\n",
+        "length = len(marker)\n",
+        "for i in range(length - size + 1):\n",
+        "    s = set(marker[i:i + size])\n",
+        "    if len(s) == size:\n",
+        "        print(\"Part 1: \", i + size)\n",
+        "        break\n",
+        "newsize = 14\n",
+        "for i in range(length - newsize + 1):\n",
+        "    s = set(marker[i:i + newsize])\n",
+        "    if len(s) == newsize:\n",
+        "        print(\"Part 2: \", i + newsize)\n",
+        "        break"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "Jh9-7jeAnGs5"
       },
@@ -105,7 +138,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrQiPsw1U/FXOyezWQXGwh",
+      "authorship_tag": "ABX9TyPDvHot6MQebkQd2Msh9vq6",
       "include_colab_link": true
     },
     "kernelspec": {
