--- a/Euribor.ipynb
+++ b/Euribor.ipynb
@@ -411,357 +411,18 @@
     {
       "cell_type": "code",
       "source": [
-        "df_day"
-      ],
-      "metadata": {
-        "id": "GGKU8eAJWZJ9",
-        "outputId": "e41842e1-a7cc-4137-839c-dc59021ae361",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 928
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "         Date  Percentage\n",
-              "0  2023-01-02       2.162\n",
-              "1  2022-12-30       2.132\n",
-              "2  2022-12-29       2.184\n",
-              "3  2022-12-28       2.202\n",
-              "4  2022-12-27       2.128\n",
-              "5  2022-12-23       2.141\n",
-              "6  2022-12-22       2.125\n",
-              "7  2022-12-21       2.102\n",
-              "8  2022-12-20       2.081\n",
-              "9  2022-12-19       2.063\n",
-              "10 2022-12-01       1.972\n",
-              "11 2022-11-01       1.737\n",
-              "12 2022-10-03       1.185\n",
-              "13 2022-09-01       0.712\n",
-              "14 2022-08-01       0.246\n",
-              "15 2022-07-01      -0.176\n",
-              "16 2022-06-01      -0.335\n",
-              "17 2022-05-02      -0.416\n",
-              "18 2022-04-01      -0.461\n",
-              "19 2022-01-03      -0.570\n",
-              "20 2021-01-04      -0.546\n",
-              "21 2020-01-02      -0.379\n",
-              "22 2019-01-02      -0.310\n",
-              "23 2018-01-02      -0.329\n",
-              "24 2017-01-02      -0.318\n",
-              "25 2016-01-04      -0.132\n",
-              "26 2015-01-02       0.076\n",
-              "27 2014-01-02       0.284"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-d6936a85-2949-46d7-aa03-9c367eb679eb\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Date</th>\n",
-              "      <th>Percentage</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>2023-01-02</td>\n",
-              "      <td>2.162</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>2022-12-30</td>\n",
-              "      <td>2.132</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2022-12-29</td>\n",
-              "      <td>2.184</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>2022-12-28</td>\n",
-              "      <td>2.202</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>2022-12-27</td>\n",
-              "      <td>2.128</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>2022-12-23</td>\n",
-              "      <td>2.141</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>2022-12-22</td>\n",
-              "      <td>2.125</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>2022-12-21</td>\n",
-              "      <td>2.102</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>2022-12-20</td>\n",
-              "      <td>2.081</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>2022-12-19</td>\n",
-              "      <td>2.063</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>2022-12-01</td>\n",
-              "      <td>1.972</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>2022-11-01</td>\n",
-              "      <td>1.737</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>2022-10-03</td>\n",
-              "      <td>1.185</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>2022-09-01</td>\n",
-              "      <td>0.712</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>2022-08-01</td>\n",
-              "      <td>0.246</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>2022-07-01</td>\n",
-              "      <td>-0.176</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>16</th>\n",
-              "      <td>2022-06-01</td>\n",
-              "      <td>-0.335</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>17</th>\n",
-              "      <td>2022-05-02</td>\n",
-              "      <td>-0.416</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>18</th>\n",
-              "      <td>2022-04-01</td>\n",
-              "      <td>-0.461</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>19</th>\n",
-              "      <td>2022-01-03</td>\n",
-              "      <td>-0.570</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>20</th>\n",
-              "      <td>2021-01-04</td>\n",
-              "      <td>-0.546</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>21</th>\n",
-              "      <td>2020-01-02</td>\n",
-              "      <td>-0.379</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>22</th>\n",
-              "      <td>2019-01-02</td>\n",
-              "      <td>-0.310</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>23</th>\n",
-              "      <td>2018-01-02</td>\n",
-              "      <td>-0.329</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>24</th>\n",
-              "      <td>2017-01-02</td>\n",
-              "      <td>-0.318</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>25</th>\n",
-              "      <td>2016-01-04</td>\n",
-              "      <td>-0.132</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>26</th>\n",
-              "      <td>2015-01-02</td>\n",
-              "      <td>0.076</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>27</th>\n",
-              "      <td>2014-01-02</td>\n",
-              "      <td>0.284</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d6936a85-2949-46d7-aa03-9c367eb679eb')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-d6936a85-2949-46d7-aa03-9c367eb679eb button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d6936a85-2949-46d7-aa03-9c367eb679eb');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from datetime import date\n",
         "start = date(2022, 11, 1)\n",
         "end = date(2022, 11, 30)\n",
         "days = pd.bdate_range(start,end)\n",
         "days_range = pd.bdate_range(start, end).format(formatter=lambda x: x.strftime('%Y-%m-%d'))\n",
-        "days_name = days.day_name()\n",
-        "days_range"
+        "days_name = days.day_name()\n"
       ],
       "metadata": {
-        "id": "_ntlHu8zWaQ6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "52808222-0303-4879-8f57-3b6868c1f502"
+        "id": "_ntlHu8zWaQ6"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['2022-11-01',\n",
-              " '2022-11-02',\n",
-              " '2022-11-03',\n",
-              " '2022-11-04',\n",
-              " '2022-11-07',\n",
-              " '2022-11-08',\n",
-              " '2022-11-09',\n",
-              " '2022-11-10',\n",
-              " '2022-11-11',\n",
-              " '2022-11-14',\n",
-              " '2022-11-15',\n",
-              " '2022-11-16',\n",
-              " '2022-11-17',\n",
-              " '2022-11-18',\n",
-              " '2022-11-21',\n",
-              " '2022-11-22',\n",
-              " '2022-11-23',\n",
-              " '2022-11-24',\n",
-              " '2022-11-25',\n",
-              " '2022-11-28',\n",
-              " '2022-11-29',\n",
-              " '2022-11-30']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -834,7 +495,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7GjpdDcDhoao2B+JVVHUa",
+      "authorship_tag": "ABX9TyP56dSmCAHyRKtxIYE6PUHr",
       "include_colab_link": true
     },
     "kernelspec": {
